--- a/Sample2DGame/Sample2DGame.csproj
+++ b/Sample2DGame/Sample2DGame.csproj
@@ -2,8 +2,8 @@
   <PropertyGroup>
     <PlatformTarget>x86</PlatformTarget>
     <OutputType>WinExe</OutputType>
-    <TargetFramework>net46</TargetFramework>
-    <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
+    <TargetFramework>net461</TargetFramework>
+    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <Platforms>x86</Platforms>
     <Configurations>Debug;Release;Steam-Debug;Steam-Release</Configurations>
   </PropertyGroup>
@@ -36,17 +36,14 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
+    <Compile Remove="Content\Scripts\Thadius.cs" />
+  </ItemGroup>
+  <ItemGroup>
     <ProjectReference Include="..\Spectrum\Spectrum.csproj" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="MonoGame.Framework">
       <HintPath>..\Spectrum\Dependencies\MonoGame.Framework.dll</HintPath>
-    </Reference>
-    <Reference Include="protobuf-net">
-      <HintPath>..\Spectrum\Dependencies\protobuf-net.dll</HintPath>
-    </Reference>
-    <Reference Include="Svg">
-      <HintPath>..\Spectrum\Dependencies\Svg.dll</HintPath>
     </Reference>
   </ItemGroup>
   <PropertyGroup>
